# yls-code

./: .gitignore  CHANGELOG.md  README.md  esbuild.mjs  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release-tauri.yml
docs/plans/: 2026-03-29-vscode-usage-dashboard-design.md  2026-03-30-datetime-display-design.md  2026-03-30-datetime-display-implementation.md  (+4 more)
scripts/: generate-release-notes.mjs  generate-release-notes.test.mjs  normalize-updater-pubkey.mjs  normalize-updater-pubkey.test.mjs  verify-release-assets.mjs  verify-release-assets.test.mjs  verify-repo-layout.mjs
src/: config.ts  extension.ts
tauri-app/: README.md  package.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/src/: app_state.rs  events.rs  lib.rs
tauri-app/src-tauri/src/commands/: accounts.rs  mod.rs  query.rs  sync.rs  system.rs
tauri-app/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.sql
tauri-app/src-tauri/src/models/: account.rs  log_entry.rs  mod.rs
tauri-app/src-tauri/src/services/: account_service.rs  log_fingerprint.rs  log_normalizer.rs  mod.rs  query_service.rs  secret_store.rs  sync_engine.rs  sync_progress.rs  yls_client.rs
tauri-app/src-tauri/tests/: account_commands.rs  db_bootstrap.rs  full_sync.rs  incremental_sync.rs  log_fingerprint.rs  query_analytics.rs  query_logs.rs  query_overview.rs  yls_client.rs
vscode-plugin/: .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package.json  tsconfig.webview.json
webview-ui/: index.html  package.json  vite.config.ts
(+126 files in other folders)
